<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout">


        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="8dp">

            <TextView
                style="@style/Theme.TravelManager.titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creer_voyage"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/border_background"
                android:padding="8dp"
                android:layout_marginTop="32dp">

                <ImageButton
                    android:id="@+id/btn_telecharger_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/updates"
                    android:background="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/image"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nom_voyage"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/nom_voyage_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_background"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_depart"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/date_edit_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:onClick="showDatePickerDialog1"
                android:background="@drawable/border_background"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_fin"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/date_edit_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:onClick="showDatePickerDialog2"
                android:background="@drawable/border_background"/>
            <Button
                style="@style/Theme.TravelManager.boutonJaune"
                android:id="@+id/suivant_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suivant"
                android:layout_marginTop="32dp"/>

            <Button
                style="@style/Theme.TravelManager.boutonBlanc"
                android:id="@+id/annuler_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="32dp"/>


        </LinearLayout>


    </ScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/jaune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>