<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreerPlanVoyageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottomLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/Theme.TravelManager.titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creer_plan_voyage"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jour"/>

                    <TextView
                        android:id="@+id/date_voyage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jour1"/>
                </LinearLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:background="@color/white"
                    android:layout_marginLeft="16dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/border_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lieu_depart"/>

                <EditText
                    android:id="@+id/lieu_depart_journee_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />


            </LinearLayout>
            <FrameLayout
                android:id="@+id/fragment_plan_voyage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/btn_ajout_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus"
                    android:background="@color/transparent_color"
                    android:layout_marginTop="16dp"
                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/jaune"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>